# video-eeg-electrode-registration

./: .gitignore  3d_viewer.html  LICENSE  README.md  electrodes_table.csv  electrodes_table.xlsx  example_electrode_positions.ppt  index.html  mobile24.elp  poster.html  pyproject.toml  reconstruction_viewer.html  scanner_electrodes_table.xlsx  test_automatic_mask.py  test_sam2.py  vggt_reconstruction.json
Scanner_recordings/: 24ch_motor_1-6-2026_2-45 PM.elc  24ch_motor_1-6-2026_3-05 PM.elc  24ch_motor_1-6-2026_3-10 PM.elc  24ch_motor_1-6-2026_3-15 PM.elc  24ch_motor_1-6-2026_3-22 PM.elc  24ch_motor_1-6-2026_4-21 PM.elc  24ch_motor_1-6-2026_4-26 PM.elc  24ch_motor_1-6-2026_4-32 PM.elc  24ch_motor_1-6-2026_4-38 PM.elc  24ch_motor_1-6-2026_4-44 PM.elc  24ch_motor_1-6-2026_4-51 PM.elc  24ch_motor_12-2-2025_9-42 AM.elc  24ch_motor_12-2-2025_9-55 AM.elc
recordings/: 24ch_motor.elc  24ch_motor_11-12-2025_10-10 AM.elc
results/: crop_info.json  electrode_order.json  electrode_positions_aligned.json  electrode_positions_stitched.json  metadata.json  tracking_data.pkl  tracking_data_smoothed.pkl  tracking_raw.pkl  tracking_smoothed.pkl
scripts/: 04_electrode_detection_circularity.py  05_electrode_detection.py  06_sam2_videopredictor_electrode.py  13_add_restriction.py  14_fix_ui.py  14_main_script_yolo_SAM2.py  24ch_map.py  24chan_loc_mapping.ipynb  3d_reconstruction.py  3d_scanner_24ch_map.py  Pipeline_analysis_compare_ground_truth.py  Script1.py  Script1_yolo_SAM2.py  Script2.py  Script2_vggt.py  Script3.py  Script3_bridge.py  debug_Script.py  debug_landmark.py  (+8 more)
(+35 files in other folders)
